--- a/gene-repo/package.json
+++ b/gene-repo/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "description": "iDASH track 1",
   "scripts": {
+    "test": "truffle test",
+    "coverage": "./node_modules/.bin/solidity-coverage",
     "solhint": "solhint -f table contracts/**/*.sol",
     "prettier:solidity": "prettier --write contracts/**/*.sol"
   },
