--- a/package.json
+++ b/package.json
@@ -27,8 +27,15 @@
     }
   ],
   "license": "LGPL-3.0",
-  "dependencies": {},
+  "dependencies": {
+    "bn.js": "^5.0.0",
+    "chai": "^4.2.0",
+    "chai-bn": "^0.1.1",
+    "np": "^5.0.3"
+  },
   "devDependencies": {
+    "@openzeppelin/contracts": "^2.3.0",
+    "big-integer": "^1.6.44",
     "mocha": "^6.2.0",
     "prettier": "^1.18.2",
     "prettier-plugin-solidity": "^1.0.0-alpha.27",
