--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "bn.js": "^5.0.0",
     "chai": "^4.2.0",
     "chai-bn": "^0.1.1",
-    "np": "^5.0.3"
+    "np": "^5.0.3",
+    "solidity-coverage": "^0.6.0-beta.5"
   },
   "devDependencies": {
     "@openzeppelin/contracts": "^2.3.0",
     "big-integer": "^1.6.44",
+    "coveralls": "^3.0.6",
     "mocha": "^6.2.0",
     "prettier": "^1.18.2",
     "prettier-plugin-solidity": "^1.0.0-alpha.27",
